--- a/simplehtmlpage.html
+++ b/simplehtmlpage.html
@@ -19,8 +19,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
+    <h1>Welcome to Lavanya GitHub Page!</h1>
     <p>This is a simple HTML page hosted on GitHub Pages.</p>
-    <p>You can add more content here.</p>
+    <p>I like to learn new tthings</p>
 </body>
 </html>
